#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

#AC_PREREQ(2.59)
#AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
#AC_CONFIG_SRCDIR([src/Rational.cc])
#AC_CONFIG_HEADER([config.h])

AC_PREREQ(2.59)
AC_INIT(symboliq, 0.1.0, deklund@fastmail.fm)
AC_CONFIG_AUX_DIR([config])
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE(symboliq, 1.0)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T

# Checks for library functions.
AC_CHECK_FUNCS([strdup])
AC_CHECK_LIB([m], [sqrt])

AC_SUBST(EXTRA_DIRS)

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
